--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
   <title>Lyrics App</title>
 </head>
 <body>
+  <h1>The Best Tunes</h1>
   <div class="lyrics">
   </div>
+  <h1>A Random Tune</h1>
   <div class="randomLyrics">
   </div>
+  <h1>Quotes to Tug at your Heart Strings</h1>
   <div class="quotes">
   </div>
   <script src="jquery-3.0.0.js" charset="utf-8"></script>
